성훈 - 모임만들기 및 word추가 모달 화면 변경

--- a/src/main/webapp/css/fontstyle.css
+++ b/src/main/webapp/css/fontstyle.css
@@ -25,6 +25,15 @@
 	
 }
 
+.subfont{
+	width:30px;
+	text-align:right; 
+	font-size: 8px; 
+	font-weight:bold;
+	vertical-align: middle;
+	
+}
+
 .table{
 	background-color: white;
 	vertical-align: middle;
